my_observability/ingress-service.yaml
# PrometheusとGrafanaを使用する。
# sudo microk8s enable observability
# admin
# prom-operator
#####################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    #
    cert-manager.io/cluster-issuer: "my-cluster-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        # ドメイン記載
        - prometheus.oahs.f5.si
        - grafana.oahs.f5.si
      secretName: my-cluster-issuer-secret # cert-managerはこのシークレットに作成した証明書を格納する
  rules:
    # user/pass: admin/prom-operator
    - host: prometheus.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
    - host: grafana.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prom-stack-grafana
                port:
                  number: 80
